# encom-globe.cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  OPTIMIZE.md  README.md  TODO.md  refactor.py  refactor_2.py  summary.md
.github/workflows/: build.yml
example/: CMakeLists.txt  Main.qml  main.cpp
lib/: CMakeLists.txt  Globe.cpp  Globe.h  GlobeRenderer.cpp  GlobeRenderer.h  IntroLinesRenderer.cpp  IntroLinesRenderer.h  MarkerRenderer.cpp  MarkerRenderer.h  PinRenderer.cpp  PinRenderer.h  RhiResources.h  SatelliteRenderer.cpp  SatelliteRenderer.h  SmokeRenderer.cpp  SmokeRenderer.h  Utils.h
lib/shaders/: globe.frag  globe.vert  introlines.frag  introlines.vert  pin.frag  pin.vert  pintop.frag  pintop.vert  satellite.frag  satellite.vert  smoke.frag  smoke.vert
src/: CMakeLists.txt  Globe.cpp  Globe.h  GlobeRenderer.cpp  GlobeRenderer.h  IntroLinesRenderer.cpp  IntroLinesRenderer.h  Main.qml  MarkerRenderer.cpp  MarkerRenderer.h  PinRenderer.cpp  PinRenderer.h  SatelliteRenderer.cpp  SatelliteRenderer.h  SmokeRenderer.cpp  SmokeRenderer.h  Utils.cpp  Utils.h  config.h.in  main.cpp
src/cmake/: RunMacDeployQt.cmake
src/lib/: CMakeLists.txt  IntroLinesRenderer.h  MarkerRenderer.cpp  MarkerRenderer.h  SatelliteRenderer.cpp  SmokeRenderer.cpp  Utils.h
src/lib/shaders/: globe.frag  pin.frag  satellite.vert  smoke.vert
src/shaders/: globe.frag  introlines.frag  introlines.vert  pin.vert  pintop.frag  pintop.vert  satellite.frag  satellite.vert  smoke.vert
